Update Patrick image

--- a/about.html
+++ b/about.html
@@ -141,7 +141,7 @@
           <div class="col-lg-7">
             <div class="about-details mb-50">
               <p class="pear1">Dependable Aviation Consulting (DAC) is a division of Dependable Outcomes
-                Ltd (DOL), a privately owned Ugandan company based in Kampala, Uganda. </p>
+                Ltd (DOL), a privately owned Ugandan company based in Kampala. </p>
               <p class="pear2">At DAC we strive to offer our clients result-oriented solutions in airline
                 management consulting, chartering, leasing and outsourcing of aircraft spare parts and
                 maintenance contracts. Our team of experts has the industry competence in these fields
