--- a/index.html
+++ b/index.html
@@ -98,11 +98,11 @@
                   </nav>
                 </div>
               </div>
-              <div class="col-xl-2 col-lg-3 col-md-3">
+              <!-- <div class="col-xl-2 col-lg-3 col-md-3">
                 <div class="header-right-btn f-right d-none d-lg-block">
                   <a href="#" class="btn header-btn">Contact Now</a>
                 </div>
-              </div>
+              </div> -->
               <!-- Mobile Menu -->
               <div class="col-12">
                 <div class="mobile_menu d-block d-lg-none"></div>
@@ -126,9 +126,9 @@
               <img src="assets/img/hero/hero_img.jpg" alt="" data-animation="fadeInRight" data-transition-duration="5s">
             </div>
             <div class="hero__caption">
-              <h1 data-animation="fadeInLeft" data-delay=".4s">Dependable Aviation <br>Consulting
-              </h1>
-              <p data-animation="fadeInLeft" data-delay=".6s">Dependable Aviation Consulting (DAC) is a division of Dependable Outcomes Ltd (DOL), a privately owned Ugandan company based in Kampala. At DAC we strive to offer our clients result-oriented solutions in airline management consulting, chartering, leasing and outsourcing of aircraft spare parts and maintenance contracts. Our team of consultants has the industry competence in these fields and can provide tailored solutions to meet each client’s needs. </p>
+              <!-- <h1 data-animation="fadeInLeft" data-delay=".4s">Dependable Aviation <br>Consulting
+              </h1> -->
+              <p data-animation="fadeInLeft" data-delay=".6s">At DAC we strive to offer our clients result-oriented solutions in airline management consulting, chartering, leasing and outsourcing of aircraft spare parts and maintenance contracts. Our team of consultants has the industry competence in these fields and can provide tailored solutions to meet each client’s needs. </p>
               <!-- Hero Btn -->
               <a href="#" class="hero-btn" data-animation="fadeInLeft" data-delay=".9s">
                 <!-- View project -->
@@ -157,7 +157,7 @@
             <div class="hero__caption">
               <h1 data-animation="fadeInLeft" data-delay=".4s">Services
               </h1>
-              <p data-animation="fadeInLeft" data-delay=".6s">DAC offers consulting services in airline management, leasing and chartering passenger and/or air cargo aircrafts as well as outsourcing spare parts and maintenance contracts for airline clients in the East Africa and Central Africa regions. Charter services are more geared towards government officials and company executives mainly in the oil industry who need to travel at their own time with convenience and comfort.
+              <p data-animation="fadeInLeft" data-delay=".6s">DAC offers consulting services in airline management, leasing and chartering passenger and/or air cargo aircrafts as well as outsourcing spare parts and maintenance contracts for airline clients in the Central and East African regions. Charter services are more geared towards government officials and company executives mainly in the oil industry who need to travel at their own time with convenience and comfort.
 
 Some of our services are offered through partnerships we have established with industry consultants in UAE, USA and Canada so as to effectively meet our clients’ demand and delivery requirements. </p>
               <!-- Hero Btn -->
@@ -187,17 +187,15 @@ Some of our services are offered through partnerships we have established with i
               <div class="hero__caption">
                 <h1 data-animation="fadeInLeft" data-delay=".4s">Services
                 </h1>
-                <p data-animation="fadeInLeft" data-delay=".6s">We offer integrated solutions for private and airline customers in the following areas 
-                  <br> <strong>Network and Fleet Planning</strong>
-                  
-                  <br><strong>Market Analysis and Forecasting</strong>
-                     
-                  <br>
-                   <strong> Business Planning</strong>
-                  <br>
-                    <strong>Chartering, Leasing and Purchasing</strong>
-                  <br> <strong>Outsourcing MRO Services and Spare parts</strong>
-                  <br> Some of our services are offered through partnerships we have established with industry consultants, MRO service providers and spare parts manfactures in UAE, USA and Canada so as to effectively meet our clients’ demand and delivery requirements.   
+                <p data-animation="fadeInLeft" data-delay=".6s">We offer integrated solutions for private and airline customers in the following areas;</p>
+                  <ol>
+                    <li>Network and Fleet Planning</li>
+                    <li>Market Analysis and Forecasting</li>
+                    <li>Business Planning</li>
+                    <li>Chartering, Leasing and Purchasing</li>
+                    <li>Outsourcing MRO Services and Spare parts</li>
+                  </ol>
+                  <p>Some of our services are offered through partnerships we have established with industry consultants, MRO service providers and spare parts manfactures in UAE, USA and Canada so as to effectively meet our clients’ demand and delivery requirements.   
                      </p>
                 <!-- Hero Btn -->
                 <a href="#" class="hero-btn" data-animation="fadeInLeft" data-delay=".9s">
@@ -222,7 +220,7 @@ Some of our services are offered through partnerships we have established with i
     <!-- slider Area End-->
 
     <!-- Our Services Start -->
-    <div class="our-services section-padding2">
+    <!-- <div class="our-services section-padding2">
       <div class="container">
         <div class="row">
           <div class=" col-lg-4 col-md-6 col-sm-6">
@@ -303,15 +301,16 @@ Some of our services are offered through partnerships we have established with i
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
     <!-- Our Services End -->
+    <br>
     <!-- Start Team -->
     <div class="site-section">
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-12 mb-5 text-center">
             <h3 class="section-subtitle">Our Team</h3>
-            <h2 class="section-title text-black mb-4">We have a <strong>Good and Expert Team</strong></h2>
+            <!-- <h2 class="section-title text-black mb-4">We have a <strong>Good and Expert Team</strong></h2> -->
           </div>
         </div>
 
@@ -374,7 +373,7 @@ Some of our services are offered through partnerships we have established with i
                 </div>
               </figure>
               <div class="person-contents">
-                <h3>Fred Guyina Kyankya</h3>
+                <h3>Fred Kyankya</h3>
                 <span class="position">General Manager</span>
               </div>
             </div>
