--- a/contact.html
+++ b/contact.html
@@ -364,7 +364,7 @@
                   <!-- footer social -->
                   <div class="footer-social">                    
                     <a href="#"><i class="fab fa-twitter"></i></a>
-                    <a href="#"><i class="fab fa-whatsapp"></i></a>                    
+                    <a href="https://wa.me/256772445223?text=Hello%20i%20would%20like%20to%20make%20an%20inquiry%20in%20regard%20to%20aviation"><i class="fab fa-whatsapp"></i></a>                    
                   </div>
                 </div>
               </div>
