--- a/work.html
+++ b/work.html
@@ -339,7 +339,11 @@
                   <div class="footer-tittle">
                     <h4><span>+256</span> 772 445223</h4>
                     <ul>
-                      <li><a href="#">info@dependable.com</a></li>
+                      <li>
+                        <a href="info@dependableaviationconsulting.com"
+                          >info@dependableaviationconsulting.com</a
+                        >
+                      </li>
                     </ul>
                     <p>
                       Plot No. 3439 Lufuka, Ndejje Road, 150 m from Bata Bata
@@ -348,10 +352,11 @@
                   </div>
                   <!-- footer social -->
                   <div class="footer-social">
-                    <a href="#"><i class="fab fa-facebook-f"></i></a>
                     <a href="#"><i class="fab fa-twitter"></i></a>
-                    <a href="#"><i class="fas fa-globe"></i></a>
-                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a
+                      href="https://wa.me/256772445223?text=Hello%20i%20would%20like%20to%20make%20an%20inquiry%20in%20regard%20to%20aviation"
+                      ><i class="fab fa-whatsapp"></i
+                    ></a>
                   </div>
                 </div>
               </div>
