--- a/clients.html
+++ b/clients.html
@@ -274,7 +274,7 @@
                         >
                       </li>
                       <!-- <li><a href="#">Earth Movers</a></li>
-                      <li><a href="#">Low loaders</a></li> -->
+                    <li><a href="#">Low loaders</a></li> -->
                       <li><a href="#">Find Us</a></li>
                     </ul>
                   </div>
@@ -299,7 +299,7 @@
                   <div class="footer-tittle">
                     <h4><span>+256</span> 772 445223</h4>
                     <ul>
-                      <li><a href="#">info@dependable.com</a></li>
+                      <li><a href="info@dependableaviationconsulting.com">info@dependableaviationconsulting.com</a></li>
                     </ul>
                     <p>
                       Plot No. 3439 Lufuka, Ndejje Road, 150 m from Bata Bata
@@ -307,11 +307,9 @@
                     </p>
                   </div>
                   <!-- footer social -->
-                  <div class="footer-social">
-                    <a href="#"><i class="fab fa-facebook-f"></i></a>
+                  <div class="footer-social">                    
                     <a href="#"><i class="fab fa-twitter"></i></a>
-                    <a href="#"><i class="fas fa-globe"></i></a>
-                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="https://wa.me/256772445223?text=Hello%20i%20would%20like%20to%20make%20an%20inquiry%20in%20regard%20to%20aviation"><i class="fab fa-whatsapp"></i></a>                    
                   </div>
                 </div>
               </div>
@@ -321,7 +319,7 @@
             <div class="row">
               <div class="col-xl-12">
                 <div class="footer-copy-right">
-                  <p>
+                  <p>                    
                     Copyright &copy;
                     <script>
                       document.write(new Date().getFullYear());
