--- a/index.html
+++ b/index.html
@@ -607,7 +607,7 @@
               <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6">
                 <div class="single-footer-caption mb-50">
                   <div class="footer-tittle">
-                    <h4><span>+256</span> 772 445223</h4>
+                    <a href="tel:+256774728524"><h4>+256 (0)774 728 524</h4></a>
                     <ul>
                       <li><a href="info@dependableaviationconsulting.com">info@dependableaviationconsulting.com</a></li>
                     </ul>
