--- a/services.html
+++ b/services.html
@@ -159,7 +159,8 @@
                     we can accurately forecast revenue, flight schedule and
                     fleet options under different scenarios and develop better
                     economic and competitive solutions. Airlines rely on such
-                    models to design new routes or optimize existing ones..
+                    models to design new routes or optimize existing ones.
+                    <br> <br> <br> <br>
                   </p>
                 </div>
               </div>
@@ -180,6 +181,7 @@
                     or divest. As a result, DAC‘s expertise comes in handy to
                     airlines as to how to be pro-active and forward-thinking in
                     developing their fleet plans.
+                    <br> <br> <br> <br> <br>
                   </p>
                 </div>
               </div>
@@ -241,6 +243,7 @@
                     planning. Our consultants work with clients to develop the
                     right business and strategic plan model that is guaranteed
                     to deliver the expected results.
+                    <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> 
                   </p>
                 </div>
               </div>
@@ -259,6 +262,7 @@
                     of partners in the respective fields. Be it cargo, private
                     jet or passenger aircraft, we can secure it to the
                     satisfaction and requirements of the client.
+                    <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> 
                   </p>
                 </div>
               </div>
@@ -343,7 +347,7 @@
               <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6">
                 <div class="single-footer-caption mb-50">
                   <div class="footer-tittle">
-                    <h4><span>+256</span> 772 445223</h4>
+                    <a href="tel:+256774728524"><h4>+256 (0)774 728 524</h4></a>
                     <ul>
                       <li>
                         <a href="info@dependableaviationconsulting.com"
